updTED