@@ -9,7 +9,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -17,14 +19,14 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
         http
-            .cors(Customizer.withDefaults())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .requestMatchers("/products/**").permitAll()
-                .anyRequest().permitAll()
+                .requestMatchers("/api/**").permitAll()
+                .anyRequest().authenticated()
             );
 
         return http.build();
@@ -33,17 +35,47 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOrigins(List.of(
-            "https://ecommerce-app-git-main-manonmani.vercel.app"
+        
+        // Allow specific origin
+        config.setAllowedOrigins(Arrays.asList(
+            "https://ecommerce-app-git-main-manonmani.vercel.app",
+            "http://localhost:3000" // For local testing
         ));
-        config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(false);
+        
+        // Allow all methods
+        config.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        
+        // Allow all headers (or specify needed ones)
+        config.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "X-Requested-With",
+            "Cache-Control"
+        ));
+        
+        // IMPORTANT: Set to true for cookies/auth headers
+        config.setAllowCredentials(true);
+        
+        // Set max age for preflight requests
+        config.setMaxAge(3600L);
+        
+        // Expose headers if needed
+        config.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type"
+        ));
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
+    }
+    
+    // Optional: Add a CorsFilter bean for better control
+    @Bean
+    public CorsFilter corsFilter() {
+        return new CorsFilter(corsConfigurationSource());
     }
 }
